--- a/content.html
+++ b/content.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AdventureTime2.0</title>
 </head>
+
 <body>
-    
+    <div class="container" id="intro">
+        <div>
+            <div>You awake in an empty classroom.. </div>
+            <div>You are Kazuki Ryuusen. </div>
+            <div>It’s the afternoon with the soft golden light reflecting off your desk and warm breeze.</div>
+            <div>It’s peaceful..</div>
+            <div>It’s always been peaceful.</div>
+            <div>You realize that you’ve always gone with the flow, someone in the background, not someone to stand out.</div>
+            <div>You are someone of no significance, would anyone even know if you just suddenly disappeared?</div>
+            <div>Who would go looking for you?</div>
+            <div>What impact have you made?</div>
+            <div>It’s late, go home, get some rest, you can think about it later.. It’ll all be ok..</div>
+        </div>
+
+        <!-- <div class="btn-opt">
+            <button></button>
+        </div> (for later)-->
+
+    </div>
+
+
+    <div class="container">
+
+    </div>
+
+
+    <div class="container">
+
+    </div>
+
+
+    <div class="container">
+
+    </div>
+
+
+    <div class="container">
+
+    </div>
+
+
+    <div class="container">
+
+    </div>
+
+
+    <div class="container">
+
+    </div>
+
+
+
+
 </body>
+
 </html>
