figuring things out

--- a/content.html
+++ b/content.html
@@ -8,26 +8,27 @@
 </head>
 
 <body>
-    <div class="container" id="intro">
-        <div>
-            <div>You awake in an empty classroom.. </div>
-            <div>You are Kazuki Ryuusen. </div>
-            <div>It’s the afternoon with the soft golden light reflecting off your desk and warm breeze.</div>
-            <div>It’s peaceful..</div>
-            <div>It’s always been peaceful.</div>
-            <div>You realize that you’ve always gone with the flow, someone in the background, not someone to stand out.</div>
-            <div>You are someone of no significance, would anyone even know if you just suddenly disappeared?</div>
-            <div>Who would go looking for you?</div>
-            <div>What impact have you made?</div>
-            <div>It’s late, go home, get some rest, you can think about it later.. It’ll all be ok..</div>
-        </div>
+    <div>
+        <div class="container" id="intro">
+            <div>
+                You awake in an empty classroom..
+You are Kazuki Ryuusen.
+It’s the afternoon with the soft golden light reflecting off your desk and warm breeze.
+It’s peaceful..
+It’s always been peaceful.
+You realize that you’ve always gone with the flow, someone in the background, not someone to stand out.
+You are someone of no significance, would anyone even know if you just suddenly disappeared?
+Who would go looking for you?
+What impact have you made?
+It’s late, go home, get some rest, you can think about it later.. It’ll all be ok..
+            </div>
 
-        <!-- <div class="btn-opt">
+            <!-- <div class="btn-opt">
             <button></button>
-        </div> (for later)-->
+        </div> (for later) button then changes the class of the div allowing it to change to text-->
 
+        </div>
     </div>
-
 
     <div class="container">
 
