--- a/content.html
+++ b/content.html
@@ -5,55 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AdventureTime2.0</title>
+    <link rel="stylesheet" href="content.css">
+    <script src="text.js"></script>
 </head>
 
 <body>
-    <div>
-        <div class="container" id="intro">
-            <div>
-                You awake in an empty classroom..
-You are Kazuki Ryuusen.
-It’s the afternoon with the soft golden light reflecting off your desk and warm breeze.
-It’s peaceful..
-It’s always been peaceful.
-You realize that you’ve always gone with the flow, someone in the background, not someone to stand out.
-You are someone of no significance, would anyone even know if you just suddenly disappeared?
-Who would go looking for you?
-What impact have you made?
-It’s late, go home, get some rest, you can think about it later.. It’ll all be ok..
-            </div>
+    <div class="container">
+        <div id="text">Text</div>
 
-            <!-- <div class="btn-opt">
-            <button></button>
-        </div> (for later) button then changes the class of the div allowing it to change to text-->
-
+        <div id="option-buttons">
+            <button>Fairy</button>
+            <button>Elf</button>
+            <button>Human</button>
         </div>
-    </div>
-
-    <div class="container">
 
     </div>
-
-
-    <div class="container">
-
-    </div>
-
-
-    <div class="container">
-
-    </div>
-
-
-    <div class="container">
-
-    </div>
-
-
-    <div class="container">
-
-    </div>
-
 
     <div class="container">
 
