--- a/content.html
+++ b/content.html
@@ -10,20 +10,19 @@
 </head>
 
 <body>
-    <div class="container">
-        <div id="text">Text</div>
+    <div>
+        <img id="background" src="Firefly an empty japanese classroom in the afternoon 97288 (1).jpg" alt="An empty Japanese Styled classroom with a warm atmosphere in the afternoon.">
+    </div>
+    
 
-        <div id="option-buttons">
-            <button>Fairy</button>
-            <button>Elf</button>
-            <button>Human</button>
+    <div class="container">
+        
+
+        <div id="text">text</div>
+        <div id="option-buttons" class="btn-grid">
+          <button class="btn" onclick="showOption(option)">option 1</button>
         </div>
-
-    </div>
-
-    <div class="container">
-
-    </div>
+      </div>
 
 
 
