ignore this push

--- a/content.html
+++ b/content.html
@@ -11,16 +11,16 @@
 
 <body>
     <div>
-        <img id="background" src="Firefly an empty japanese classroom in the afternoon 97288 (1).jpg" alt="An empty Japanese Styled classroom with a warm atmosphere in the afternoon.">
+        <img id="background" src="Firefly an empty japanese classroom in the afternoon 97288 (1).jpg" alt="An empty Japanese Styled classroom with a warm atmosphere in the afternoon." onclick="changeImage()">
     </div>
     
 
     <div class="container">
         
 
-        <div id="text">text</div>
-        <div id="option-buttons" class="btn-grid">
-          <button class="btn" onclick="showOption(option)">option 1</button>
+        <div id="option-buttons" id="text">text</div>
+        <div  class="btn-grid">
+          <button class="btn" >option 1</button>
         </div>
       </div>
 
