--- a/content.html
+++ b/content.html
@@ -10,22 +10,12 @@
 </head>
 
 <body>
-    <div>
-        <img id="background" src="Firefly an empty japanese classroom in the afternoon 97288 (1).jpg" alt="An empty Japanese Styled classroom with a warm atmosphere in the afternoon." onclick="changeImage()">
-    </div>
-    
-
-    <div class="container">
-        
-
-        <div id="option-buttons" id="text">text</div>
-        <div  class="btn-grid">
-          <button class="btn" >option 1</button>
-        </div>
-      </div>
-
-
-
+  <div id="content">
+    <h1>Welcome To Story Time with Kevin</h1>
+    <label for="name-input">What is your name?</label>
+    <input id="name-input" type="text"></input>
+    <button id="start-button">Start the story!!</button>
+</div>
 
 </body>
 
