--- a/content.html
+++ b/content.html
@@ -10,12 +10,11 @@
 </head>
 
 <body>
-  <div id="content">
-    <h1>Welcome To Story Time with Kevin</h1>
-    <label for="name-input">What is your name?</label>
-    <input id="name-input" type="text"></input>
+  <section id="content" class="beginning">
+    <h1>Adventure Time 2.0</h1>
+    <p>You are a highschool student named Kazuki Ryuusen and you get summoned into a different reality as a hero to defeat the Demon king. Along the way you will be faced with action packed adventures.</p>
     <button id="start-button">Start the story!!</button>
-</div>
+  </section>
 
 </body>
 
