--- a/content.html
+++ b/content.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="content">
-    <h1>Welcome To Story Time with Kevin</h1>
+    <h1 class="welcome">Welcome To Story Time with Kevin</h1>
     <label for="name-input">What is your name?</label>
     <input id="name-input" type="text"></input>
     <button id="start-button">Start the story!!</button>
