--- a/content.html
+++ b/content.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-  <section id="content" class="beginning">
+  <div id="content" class="beginning">
     <h1>Adventure Time 2.0</h1>
     <p>You are a highschool student named Kazuki Ryuusen and you get summoned into a different reality as a hero to defeat the Demon king. Along the way you will be faced with action packed adventures.</p>
+    <label for = "name-input">What is your name?</label>
+    <input id = "name-input" type = "text"></input>
     <button id="start-button">Start the story!!</button>
-  </section>
+  </div>
 
 </body>
 
