--- a/content.html
+++ b/content.html
@@ -10,21 +10,16 @@
 </head>
 
 <body>
-<<<<<<< HEAD
   <div id="content" class="beginning">
-    <h1>Adventure Time 2.0</h1>
+    <h1 class="a12bgf">Adventure Time 2.0</h1>
     <p>You are a highschool student named Kazuki Ryuusen and you get summoned into a different reality as a hero to defeat the Demon king. Along the way you will be faced with action packed adventures.</p>
     <label for = "name-input">What is your name?</label>
     <input id = "name-input" type = "text"></input>
-=======
-  <div id="content">
-    <h1 class="welcome">Welcome To Story Time with Kevin</h1>
-    <label for="name-input">What is your name?</label>
-    <input id="name-input" type="text"></input>
->>>>>>> 120960a5448fafca77cb53c32d3ed4443c60d7cb
     <button id="start-button">Start the story!!</button>
   </div>
 
 </body>
 
 </html>
+
+<!-- (leeanna) hey I did some CSS and tampered with the html a bit ( the js still works, I played the game :> ).-->
