--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div id="imageContainer"></div>
   <div id="content" class="beginning">
     <h1 class="a12bgf">Adventure Time 2.0</h1>
     <p>You are a highschool student named Kazuki Ryuusen and you get summoned into a different reality as a hero to defeat the Demon king. Along the way you will be faced with action packed adventures.</p>
